force-app/main/default/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <description>Many-to-many junction between Candidate and Job Position: one candidate can apply to multiple positions, one position can receive many applications.</description>
    <label>Application</label>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Application Name</label>
        <startingNumber>0</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>