force-app/main/default/objects/Application__c/fields/Applied_Date__c.field-meta.xml
<CustomField>
    <fullName>Applied_Date__c</fullName>
    <label>Applied Date</label>
    <type>Date</type>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>Defaults to today; also set via flow on record creation.</inlineHelpText>
</CustomField>