force-app/main/default/objects/Application__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>MasterDetail</type>
    <inlineHelpText>Deleting the candidate cascades and deletes all related applications (standard master-detail behavior).</inlineHelpText>
</CustomField>