force-app/main/default/objects/Application__c/fields/Job_Position__c.field-meta.xml
<CustomField>
    <fullName>Job_Position__c</fullName>
    <label>Job Position</label>
    <referenceTo>Job_Position__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>MasterDetail</type>
    <inlineHelpText>Required for the existing Roll-Up Summary fields on Job_Position__c (Total_Applications__c, Rejected_Applications__c, Selected_Candidates__c) to function.</inlineHelpText>
</CustomField>