force-app/main/default/objects/Application__c/fields/Recruiter_Notes__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Notes__c</fullName>
    <label>Recruiter Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <inlineHelpText>Internal notes. Not visible to candidates. FLS: must be restricted from any Hiring Manager profile/permission set.</inlineHelpText>
</CustomField>