force-app/main/default/objects/Application__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <inlineHelpText>Reason the candidate was rejected, if applicable.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Over Qualified</fullName>
            </value>
            <value>
                <fullName>Under Qualified</fullName>
            </value>
            <value>
                <fullName>Salary Mismatch</fullName>
            </value>
            <value>
                <fullName>Failed Interview</fullName>
            </value>
            <value>
                <fullName>Position Cancelled</fullName>
            </value>
            <value>
                <fullName>Candidate Withdrew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>